<resources>
    <string name="app_name">Разработка алгаритма учёта денежных средств</string>
    <string name="about_program">О программе</string>
    <string name="categories">Выбор категории</string>
    <string name="currency">Валюта</string>
    <string name="settings">Настройки</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>


    <string name="income">Доходы</string>
    <string name="costs">Расходы</string>
    <string name="saving">Сбережения</string>
    <string name="all_incomes">Все доходы</string>
    <string name="all_costs">Все расходы</string>
    <string name="all_saving">Все сбережения</string>
    <string name="balance">Баланс: </string>
    <string name="date">Дата</string>
    <string name="amount">Сумма</string>
    <string name="time">Время</string>
    <string name="comment">Коментарий…</string>

    <string name="password">Пароль</string>
    <string name="search">Поиск…</string>
    <string name="zero">000.00</string>
</resources>
