<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.narutomatvey.AddingPageActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="366dp"
        android:layout_height= "75dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textDate"
                style="@style/MainTextStyle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/date" />


            <EditText
                android:id="@+id/editValueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textDate"
                android:ems="10"
                android:gravity="center"
                android:inputType="date"
                android:text="19.05.2018" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTime"
                style="@style/MainTextStyle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/time" />


            <EditText
                android:id="@+id/editValueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTime"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:gravity="center"
                android:inputType="time"
                android:text="00:00" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="366dp"
        android:layout_height="80dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCategories"
                style="@style/MainTextStyle"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/categories" />

            <ImageButton
                android:id="@+id/imBtnCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@android:drawable/arrow_down_float" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent">

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="366dp"
        android:layout_height="75dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAmount"
                style="@style/MainTextStyle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/editValueAmount"
                style="@style/TwoTextStyle"
                android:layout_below="@+id/textAmount"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="000.00" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="122dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCurrency"
                style="@style/MainTextStyle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/currency" />

            <ImageButton
                android:id="@+id/imBtnCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@android:drawable/arrow_down_float" />

        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editComment"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment"
        android:textColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imBtnSubmit"
        android:layout_width="182dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/ic_launcher_background" />
</android.support.constraint.ConstraintLayout>
